# acounter

./: .gitignore  README.md  architecture.md  efficency_opportunities.txt  resources.md
backend/: README.md
backend/acounter-core/: .env.example  .gitignore  Cargo.toml  Cargo.toml.example  Hosting.md  README.md  architecture.md  instructions.md
backend/acounter-core/fortnox_cache/: employee__ID_1.json  employees.json  schedule_time__ID_1__PARAMS_date_2024_05_01;.json  schedule_time__ID_1__PARAMS_date_2024_05_02;.json  schedule_time__ID_1__PARAMS_date_2024_05_03;.json  schedule_time__ID_1__PARAMS_date_2024_05_04;.json  schedule_time__ID_1__PARAMS_date_2024_05_05;.json  schedule_time__ID_1__PARAMS_date_2024_05_06;.json  schedule_time__ID_1__PARAMS_date_2024_05_07;.json  schedule_time__ID_1__PARAMS_date_2024_05_08;.json  schedule_time__ID_1__PARAMS_date_2024_05_09;.json  schedule_time__ID_1__PARAMS_date_2024_05_10;.json  schedule_time__ID_1__PARAMS_date_2024_05_11;.json  schedule_time__ID_1__PARAMS_date_2024_05_12;.json  schedule_time__ID_1__PARAMS_date_2024_05_13;.json  schedule_time__ID_1__PARAMS_date_2024_05_14;.json  schedule_time__ID_1__PARAMS_date_2024_05_15;.json  schedule_time__ID_1__PARAMS_date_2024_05_16;.json  schedule_time__ID_1__PARAMS_date_2024_05_17;.json  schedule_time__ID_1__PARAMS_date_2024_05_18;.json  schedule_time__ID_1__PARAMS_date_2024_05_19;.json  schedule_time__ID_1__PARAMS_date_2024_05_20;.json  schedule_time__ID_1__PARAMS_date_2024_05_21;.json  schedule_time__ID_1__PARAMS_date_2024_05_22;.json  schedule_time__ID_1__PARAMS_date_2024_05_23;.json  schedule_time__ID_1__PARAMS_date_2024_05_24;.json  schedule_time__ID_1__PARAMS_date_2024_05_25;.json  schedule_time__ID_1__PARAMS_date_2024_05_26;.json  schedule_time__ID_1__PARAMS_date_2024_05_27;.json  schedule_time__ID_1__PARAMS_date_2024_05_28;.json  schedule_time__ID_1__PARAMS_date_2024_05_29;.json  schedule_time__ID_1__PARAMS_date_2024_05_30;.json  schedule_time__ID_1__PARAMS_date_2024_05_31;.json  time_registrations__PARAMS_fromDate_2024_04_22;toDate_2024_04_28;userIds_1;.json  time_registrations__PARAMS_fromDate_2024_05_01;toDate_2024_05_31;userIds_1;.json  time_registrations__PARAMS_fromDate_2024_05_01;toDate_2024_05_31;userIds_45;.json
backend/acounter-core/migrations/: 20230101000000_initial_schema.sql
backend/acounter-core/src/: fortnox.rs  fortnox_api_test.rs  fortnox_client.rs  fortnox_data.rs  fortnox_info.rs  fortnox_main_buff.txt  fortnox_tests.rs  fortnox_token_refresh.rs  google_auth_server.rs  issues.txt  main.rs  new_main.rs  old_main.rs  simple_auth_server.rs  slack_test.rs  time_validation.rs  time_validation_tests.rs  turborilla_time_validation.rs
backend/acounter-test-client/: Cargo.toml
backend/acounter-test-client/src/: main.rs
