[package]
name = "acounter-core"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Fetches Fortnox time entries and saves to CSV"
repository = "https://github.com/yourusername/fortnox-fetcher"
license = "MIT"

[dependencies]
tokio = { version = "1.33.0", features = [
    "full",
    "macros",
    "rt-multi-thread",
    "sync",
] }
axum = { version = "0.8", features = ["macros"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace"] }
axum-server = { version = "0.6.0", features = [
    "tls-rustls",
] } # Use axum-server for TLS
rustls-pemfile = "2.1.0" # For loading PEM certificate/key files
http-body-util = { version = "0.1" }
# jsonwebtoken = "9.1.0" # Not needed for this specific task
# governor = "0.6.0" # Not needed for this specific task
# sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "json"] } 
# uuid = { version = "1.5", features = ["v4", "serde"] } 
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
# lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "builder"] } 
slack-morphism = { version = "2.10.1", features = ["axum"] }
reqwest = { version = "0.11.22", features = [
    "json",
    "rustls-tls",
] } # Using rustls-tls for better cross-platform compatibility
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
envy = "0.4.2" # Can use this or just std::env for simplicity here
thiserror = "1.0.50"
anyhow = "1.0.98"
sha2 = "0.10.8"
hex = "0.4.3"
async-trait = "0.1.74"
csv = "1.3"
url = "2.5.0"
rand = { version = "0.8", features = ["std_rng"] }
base64 = "0.21" # Check for latest version if desired
hyper = "1.6.0"
bytes = "1"
once_cell = "1.19"
lazy_static = "1.5" # Or 1.4 is also common
regex = "1.10"
rust_decimal = { version = "1.35", features = ["serde", "serde-with-str"] }
rust_decimal_macros = "1.35" # For the `dec!` macro

# holidays = "0.1.0" # https://lib.rs/crates/holidays

[dev-dependencies]
# Testing utilities
# tokio-test = "0.4.3"
# mockall = "0.11.4"
# wiremock = "0.5.19"

[profile.release]
# Optimization settings
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[profile.dev]
# Developer experience improvements
opt-level = 0
debug = true
