# Cargo.toml
[package]
name = "acounter-test-client"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Test client for acounter-core backend"

[dependencies]
tokio = { version = "1.33.0", features = ["full", "macros", "rt-multi-thread"] }
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"